test_error.log
FAIL components/__tests__/webcams-list-screen.test.tsx
   Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
      If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
      If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
      To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
      If you need a custom transformation specify a "transform" option in your config.
      If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    C:\Users\Yago\WebstormProjects\expo-android-project-3\node_modules\react-native\index.js:27
    import typeof * as ReactNativePublicAPI from './index.js.flow';
    ^^^^^^

    SyntaxError: Cannot use import statement outside a module

      1 | import { QueryClient, QueryClientProvider } from '@tanstack/react-query';
    > 2 | import { render, screen, waitFor } from '@testing-library/react-native';
        | ^
      3 | import React from 'react';
      4 | import { SafeAreaProvider } from 'react-native-safe-area-context';
      5 | import { WebcamsListScreen } from '../webcams-list-screen';

      at Runtime.createScriptFromCode (node_modules/jest-runtime/build/index.js:1505:14)
      at Object.require (node_modules/@testing-library/react-native/src/helpers/accessibility.ts:2:1)
      at Object.require (node_modules/@testing-library/react-native/src/matchers/to-be-busy.ts:5:1)
      at Object.require (node_modules/@testing-library/react-native/src/matchers/extend-expect.ts:1:1)
      at Object.require (node_modules/@testing-library/react-native/src/index.ts:2:1)
      at Object.require (components/__tests__/webcams-list-screen.test.tsx:2:1)

Test Suites: 1 failed, 1 total
Tests:       0 total
Snapshots:   0 total
Time:        2.463 s
Ran all test suites matching /components\\__tests__\\webcams-list-screen.test.tsx/i.
